FIX bug: when <main> height is too short, footer won't be in the bottom

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -512,7 +512,7 @@ a {
     padding-top: 0;
     margin: 0 auto;
     width: 100%;
-    /* height: 100%; */
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -521,7 +521,7 @@ a {
 }
 @media screen and (max-width: 480px) {
     #scheme-Paradox .material-layout .material-layout__content {
-        /* height: 100%; */
+        min-height: 100%;
         display: flex;
         flex-direction: column;
         box-sizing: border-box;
